PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Allow PTS_DISPLAY_MODE to override other display mode preferences (e.g. short mode requested inline)
pts-core: Optional Download Cache Server interface support for HTTPS
pts-core: Support for archiving test profile change-logs locally rather than having to always querying OpenBenchmarking.org server
pts-core: Allow caching of some OpenBenchmarking.org overview metrics locally
pts-core: Allow displaying more overview metrics from OpenBenchmarking.org in the web view and info sub-command
phoromatic: Allow binary log file uploads by default when Phoromatic Server is 10.8+
phoromatic: Input sanitization updates for Phoromatic Server and other security improvements
phoromatic: Move "Create A Test Profile" page behind an opt-in rootadmin Phoromatic Server option
phoromatic: Log update script output
phodevi: Use "-NoProfile" with powershell for possible performance benefits
phodevi: Avoid including kernel version in Mesa/OpenGL string
phodevi: Arm Neoverse-V1 / Cortex-X2 identification

Phoronix Test Suite 10.8.0
25 December 2021

pts-core: Remaining PHP 8.1 warnings/fixes addressed
pts-core: Various macOS 12 warning fixes
pts-core: Allow using OUTPUT_DIR / OUTPUT_FILE environment variables to control result-file-to* sub-commands
pts-core: Improved JSON output generation, add option to the result viewer
pts-core: Add result-file-to-html sub-command and simple inline HTML result output option from result viewer
pts-core: Allow sorting results by test date/time
pts-core: Add TEST_EXECUTION_SORT environment variable to allow sorting test run order in more ways
pts-core: Consolidate/centralize handling of environment variable options to pts_env
pts-core: Add remove-incomplete-results-from-result-file helper command to remove results with incomplete or missing data
pts-core: Add REMOVE_TESTS_ON_COMPLETION environment variable as another way to have tests auto-uninstall/remove after running